# dms-frontend

./: CLI.md  CLI_plan.md  README.md  TEST.md  local_dms_frontend.sh  local_dms_scheduler.sh  pyproject.toml  run_dms.sh  run_dms_frontend.sh  run_scheduler.sh
app/: main.py  services_container.py
app/api/: dependencies.py  security.py
app/api/routes/: meta.py  operator.py  user.py
app/cli/: client.py  config.py  kube_main.py  main.py  shell.py
app/core/: config.py  events.py  logging.py
app/dev/: __init__.py  local_scheduler_stub.py
app/services/: event_processor.py  models.py  repository.py  scheduler.py  tasks.py
cli/: local_scheduler.py  main.py  tasks.py
dms-cli/: CLI.md  CLI_plan.md  pyproject.toml
dms-cli/src/dms_cli/: client.py  config.py  kube_main.py  main.py  shell.py
docs/operations/: redis-index-consistency-check.md
docs/services/: repository.md  task_state.md
examples/external_status_service/: README.md  pyproject.toml  worker.py
scripts/: redis_index_consistency_check.py
task_state/: __init__.py  models.py  redis.py  repository.py  timezone.py
tests/: conftest.py  test_api.py  test_cli.py  test_event_processor.py  test_logging.py  test_repository.py  test_services_container.py  test_task_state.py
